--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.12",
     "bootstrap": "^5.2.3",
     "framer-motion": "^10.9.2",
     "next": "13.2.4",
