--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@emotion/styled": "^11.10.6",
     "@hookform/resolvers": "^3.0.0",
     "@nextui-org/react": "^1.0.0-beta.12",
-    "axios": "^1.3.4",
     "framer-motion": "^10.10.0",
     "next": "13.2.4",
     "nodemailer": "^6.9.1",
@@ -25,6 +24,9 @@
     "react-modal": "^3.16.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
-    "yup": "^1.0.2"
+    "sqlite3": "^5.1.6"
+  },
+  "devDependencies": {
+    "prisma": "^4.12.0"
   }
 }
