--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate:dev": "npx dotenv -e .env.local -- prisma migrate dev",
+    "db:push": "npx dotenv -e .env.local -- prisma db push",
+    "migrate:reset": "npx dotenv -e .env.local -- prisma migrate reset",
+    "db:seed": "npx dotenv -e .env.local -- prisma db seed",
+    "prisma:generate": "npx dotenv -e .env.local -- prisma generate",
+    "prisma:studio": "npx dotenv -e .env.local -- prisma studio",
+    "production:build": "npx prisma generate && npx prisma migrate deploy && next build"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.5.5",
@@ -14,7 +21,9 @@
     "@emotion/styled": "^11.10.6",
     "@hookform/resolvers": "^3.0.0",
     "@nextui-org/react": "^1.0.0-beta.12",
+    "@prisma/client": "^4.12.0",
     "framer-motion": "^10.10.0",
+    "jquery": "^3.6.4",
     "next": "13.2.4",
     "nodemailer": "^6.9.1",
     "react": "18.2.0",
@@ -23,8 +32,7 @@
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1",
-    "sqlite3": "^5.1.6"
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "prisma": "^4.12.0"
