--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@prisma/client": "^4.12.0",
     "framer-motion": "^10.10.0",
     "jquery": "^3.6.4",
-    "next": "13.2.4",
+    "next": "^13.5.7",
     "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
