--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
+    "react-select": "^5.9.0",
     "react-slick": "^0.29.0",
     "sass-loader": "^16.0.3",
     "slick-carousel": "^1.8.1",
