added buttons for calendar events

--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_EMAIL=kdroshev@yahoo.com
-NEXT_PUBLIC_EMAIL_PASS=yeukmnstwfjkbidp
+NEXT_PUBLIC_EMAIL=aseam_detailing@outlook.com
+NEXT_PUBLIC_EMAIL_PASS=itearhvklydusrbr
