--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_EMAIL=aseam_detailing@outlook.com
-NEXT_PUBLIC_EMAIL_PASS=itearhvklydusrbr
+NEXT_PUBLIC_EMAIL=mdroshev@gmail.com
+NEXT_PUBLIC_EMAIL_PASS=aijicymgedifidoh
