--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "css-loader": "^7.1.2",
     "framer-motion": "^10.10.0",
     "html-webpack-plugin": "^5.6.3",
+    "i18next": "^25.3.2",
     "jquery": "^3.6.4",
     "next": "^13.5.7",
+    "next-i18next": "^15.4.2",
     "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-i18next": "^15.6.0",
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
     "react-select": "^5.9.0",
