--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hookform/resolvers": "^3.0.0",
     "@nextui-org/react": "^1.0.0-beta.12",
     "@prisma/client": "^4.12.0",
+    "@vercel/analytics": "^1.5.0",
     "css-loader": "^7.1.2",
     "framer-motion": "^10.10.0",
     "html-webpack-plugin": "^5.6.3",
