--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "html-webpack-plugin": "^5.6.3",
     "i18next": "^25.3.2",
     "jquery": "^3.6.4",
+    "lucide-react": "^0.553.0",
     "next": "^13.5.7",
     "next-i18next": "^15.4.2",
     "nodemailer": "^6.9.1",
