--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nextui-org/react": "^1.0.0-beta.12",
     "@prisma/client": "^4.12.0",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "css-loader": "^7.1.2",
     "framer-motion": "^10.10.0",
     "html-webpack-plugin": "^5.6.3",
