--- a/package.json
+++ b/package.json
@@ -21,16 +21,17 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "css-loader": "^7.1.2",
+    "eslint-config-next": "^16.0.7",
     "framer-motion": "^10.10.0",
     "html-webpack-plugin": "^5.6.3",
     "i18next": "^25.3.2",
     "jquery": "^3.6.4",
     "lucide-react": "^0.553.0",
-    "next": "^13.5.7",
+    "next": "^16.0.7",
     "next-i18next": "^15.4.2",
     "nodemailer": "^6.9.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.43.9",
     "react-i18next": "^15.6.0",
     "react-icons": "^5.5.0",
